@@ -423,7 +423,8 @@ class _CremeTestCase:
 
     def assertPOST(self, expected_status, *args, **kwargs):
         response = self.client.post(*args, **kwargs)
-        self.assertEqual(expected_status, response.status_code)
+        # self.assertEqual(expected_status, response.status_code)
+        self.assertEqual(expected_status, response.status_code, response.content.decode())
 
         return response
 
